testsuite/tests/gadt/T14320.stderr

T14320.hs:17:3: error:
    GADT constructor type signature cannot contain nested ‘forall’s or contexts
    Suggestion: instead use this type signature:
      TEBad :: forall a. Exp -> (TypedExpToo a)
    In the definition of data constructor ‘TEBad’
